<resources>
    <string name="app_name">RappelTout</string>

    <!--    Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_privacy">Privacy policy</string>
    <string name="action_logout">Logout</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Splash Screen-->
    <string name="loading">Loading…</string>

    <!-- Login   -->
    <string name="login_title">RappelTout</string>
    <string name="login_email">Login with Email</string>
    <string name="login_gmail">Login with Google</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="connection_succeed">Signed-in</string>
    <string name="error_authentication_canceled">Sign-in attempt was canceled!</string>
    <string name="error_no_internet">No Internet access! The device is offline.</string>
    <string name="error_unknown_error">An unknown error has occurred</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- SetReminderActivity  -->
    <string name="start">Start</string>
    <string name="hh_mm_start">10:00</string>
    <string name="hh_mm_end">11:00</string>
    <string name="end">End</string>
    <string name="before_event">%1$s %2$s before event</string>
    <string name="location">Location</string>
    <string name="repeat">Repeat</string>
    <string name="notes">Notes</string>
    <string name="fus_hor">Fus .hor.</string>
    <string name="button">Button</string>


    <string name="credits">RappelTout Privacy Policy</string>
    <string name="privacy_policy_text"><b>Types of Data collected</b>\nAmong the types of Personal Data that this Application collects, by itself or through third parties, there are: Cookies; Usage Data; email address.
        \n\nComplete details on each type of Personal Data collected are provided in the dedicated sections of this privacy policy or by specific explanation texts displayed prior to the Data collection.
        Personal Data may be freely provided by the User, or, in case of Usage Data, collected automatically when using this Application.
        Unless specified otherwise, all Data requested by this Application is mandatory and failure to provide this Data may make it impossible for this Application to provide its services. In cases where this Application specifically states that some Data is not mandatory, Users are free not to communicate this Data without consequences to the availability or the functioning of the Service.
        Users who are uncertain about which Personal Data is mandatory are welcome to contact the Owner.
        Any use of Cookies - or of other tracking tools - by this Application or by the owners of third-party services used by this Application serves the purpose of providing the Service required by the User, in addition to any other purposes described in the present document and in the Cookie Policy, if available.
        \n\nUsers are responsible for any third-party Personal Data obtained, published or shared through this Application and confirm that they have the third party\'s consent to provide the Data to the Owner.
        \n\n<b>Mode and place of processing the Data</b>
        \nMethods of processing:
        \nThe Owner takes appropriate security measures to prevent unauthorized access, disclosure, modification, or unauthorized destruction of the Data.
        The Data processing is carried out using computers and/or IT enabled tools, following organizational procedures and modes strictly related to the purposes indicated.
        In addition to the Owner, in some cases, the Data may be accessible to certain types of persons in charge, involved with the operation of this Application (administration, sales, marketing, legal, system administration) or external parties (such as third-party technical service providers, mail carriers, hosting providers, IT companies, communications agencies) appointed, if necessary, as Data Processors by the Owner.
        The updated list of these parties may be requested from the Owner at any time.
        \n\n<b>Legal basis of processing</b>
        \nThe Owner may process Personal Data relating to Users if one of the following applies:
        Users have given their consent for one or more specific purposes. Note: Under some legislations the Owner may be allowed to process Personal Data until the User objects to such processing ("opt-out"), without having to rely on consent or any other of the following legal bases. This, however, does not apply, whenever the processing of Personal Data is subject to European data protection law;
        provision of Data is necessary for the performance of an agreement with the User and/or for any pre-contractual obligations thereof;
        processing is necessary for compliance with a legal obligation to which the Owner is subject;
        processing is related to a task that is carried out in the public interest or in the exercise of official authority vested in the Owner;
        processing is necessary for the purposes of the legitimate interests pursued by the Owner or by a third party.
        In any case, the Owner will gladly help to clarify the specific legal basis that applies to the processing, and in particular whether the provision of Personal Data is a statutory or contractual requirement, or a requirement necessary to enter into a contract.
    </string>


</resources>
