<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.elbaz.eliran.rappeltout.ui.viewmodels.MainViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/end_view"
        android:transitionName="shared_element_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activities.MainActivity"
        android:background="@drawable/ic_background"
        android:backgroundTint="#80FFFFFF"
        android:backgroundTintMode="src_over">

        <!--Import of TopBar-->
        <include
            layout="@layout/back_btn_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Title Edit-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_date_range_black_24dp"
            android:layout_margin="25dp"
            android:hint="Title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{mainViewModel.title}"
                android:background="@color/design_default_color_background"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Time selection cardView-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:elevation="8dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <!--Left container -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/start"/>
                    <TextView
                        android:id="@+id/start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@{mainViewModel.startDateString}" />
                    <TextView
                        android:id="@+id/start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@{mainViewModel.startTimeString}" />
                </LinearLayout>

                <!--Right container -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/end" />
                    <TextView
                        android:id="@+id/end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@{mainViewModel.endDateString}" />
                    <TextView
                        android:id="@+id/end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@{mainViewModel.endTimeString}" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--  Middle container      -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <!--  Class      -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_color_lens_black_24dp"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/event_color"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:elevation="2dp"
                    app:cardCornerRadius="12dp"
                    app:cardBackgroundColor="@{mainViewModel.eventColor}"/>
            </LinearLayout>

            <!--  Notification before event      -->
            <LinearLayout
                android:id="@+id/set_time_before_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_access_alarm_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{@string/before_event(mainViewModel.valueBeforeEvent, mainViewModel.beforeEvent)}"/>
            </LinearLayout>

            <!--  Location      -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="25dp">

                <!--Title Edit-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/location_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_location_on_black_24dp"
                    android:hint="@string/location">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/event_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/design_default_color_background"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <!--  Bottom Container       -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_repeat_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_rate_review_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notes" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="15dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_public_black_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fus_hor"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/cancel_alarm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel Alarm"
            android:layout_gravity="center"
            android:visibility="gone"
            android:onClick="@{() -> mainViewModel.cancelAlarmWithId(1)}"/>
    </LinearLayout>
</layout>